--- a/src/app/dashboard/components/user-management/adduser-form/adduser-form.component.html
+++ b/src/app/dashboard/components/user-management/adduser-form/adduser-form.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="background-image: url('assets/images/net-rd-2-1.jpg');">
+<div class="container">
   <form [formGroup]="adduserForm">
     <div
       class="register-header block justify-content-center align-content-center align-items-center text-2xl w-full"
