--- a/src/app/dashboard/components/user-management/adduser-form/adduser-form.component.scss
+++ b/src/app/dashboard/components/user-management/adduser-form/adduser-form.component.scss
@@ -4,36 +4,44 @@
   min-height: 75vh;
   padding: 15px;
   display: flex;
-  background: transparent;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   backdrop-filter: blur(8px);
 }
 
 .container form {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
   padding: 20px;
   width: 650px;
-  height: auto;
-  backdrop-filter: blur(8px);
   margin: 15px;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-color: #000;
-  border-radius: 20px;
   align-items: center;
+
+   // Ekran daraldıkça genişliği sıfırla
+   @media screen and (max-width: 768px) {
+    width: 100%;
+  }
 }
 
+.container form input{
+  padding-left: 40px;
+}
 .register-header h2{
   margin-left: 150px;
+
+   // Ekran daraldıkça sola kaydır
+   @media screen and (max-width: 768px) {
+    margin-left: 0;
+  }
 }
 .container form .wrapper{
   margin: 15px;
+
+  // Ekran daraldıkça boşlukları azalt
+  @media screen and (max-width: 768px) {
+    margin: 10px;
+  }
 }
 a {
   text-decoration: underline;
@@ -43,5 +51,4 @@ a {
 a:hover{
   color:#176b87;
 }
-
 
