--- a/src/app/pages/components/product/product.component.html
+++ b/src/app/pages/components/product/product.component.html
@@ -1,10 +1,18 @@
 <div class="container">
-  <div class="product-body">
-    <div class="product-filter">
-      <app-card-element></app-card-element>
-    </div>
-    <div class="product-list">
-      <app-card></app-card>
-    </div>
-  </div>
+  <ng-container *ngIf="showLoading;else contentLoading">
+    <app-loading></app-loading>
+  </ng-container>
+    <ng-template #contentLoading>
+      <ng-container *ngIf="hasData; ">
+        <div class="product-body">
+          <div class="product-filter">
+            <app-card-element></app-card-element>
+          </div>
+          <div class="product-list">
+            <app-card></app-card>
+          </div>
+        </div>
+      </ng-container>
+    </ng-template>
+
 </div>
