--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,10 @@
-<app-user-management></app-user-management>
-
+<div class="container">
+  <div class="product-body">
+    <div class="product-filter">
+      <app-dashboard-sidebar></app-dashboard-sidebar>
+    </div>
+    <div class="product-list">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
