--- a/src/app/dashboard/components/product-management/product-management.component.html
+++ b/src/app/dashboard/components/product-management/product-management.component.html
@@ -1,91 +1,10 @@
-<div class="conatiner">
-  <div class="card" style="width: 1100px;">
-    <p-table
-        #dt2
-        [value]="products"
-        dataKey="id"
-        [rows]="10"
-        [showCurrentPageReport]="true"
-        [rowsPerPageOptions]="[10, 25, 50]"
-        [paginator]="true"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [globalFilterFields]="['name', 'country.name', 'representative.name', 'status']"
-        [tableStyle]="{ 'min-width': '75rem'  }"
-        >
-        <ng-template pTemplate="caption">
-     <div class="flex flex-row justify-content-between align-items-center">
-      <div class="flex flex-row justify-content-between align-content-center w-21rem">
-        <div>
-          <span class="button-style">
-            <button class="button"  (click)="show()"><i class="pi pi-plus" style="color: white"></i>
-              Ekle</button>
-          </span>
+<div class="container">
+        <div class="product-body">
+          <div class="product-filter">
+            <app-product-sidebar></app-product-sidebar>
+          </div>
+          <div class="product-list">
+           <router-outlet></router-outlet>
+          </div>
         </div>
-      </div>
-            <div class="flex">
-                <span class="p-input-icon-left ml-auto">
-                    <i class="pi pi-search"></i>
-                    <input pInputText type="text" (input)="dt2.filterGlobal($any($event.target).value, 'contains')" placeholder="Search keyword" />
-                </span>
-            </div>
-     </div>
-        </ng-template>
-        <ng-template pTemplate="header">
-            <tr>
-                <th style="width:10%">Code</th>
-                <th style="width:10%">Name</th>
-                <th style="width:10%">Image </th>
-                <th style="width:10%">Price</th>
-                <th style="width:10%;">Quantity</th>
-                <th style="width:10%">Status </th>
-                <th style="width:10%">Category</th>
-                <th style="width:10%;">Description</th>
-                <th style="width:10%;">İşlemler</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-customer>
-          <tr>
-            <td>{{ customer.code }}</td>
-            <td>{{ customer.name }}</td>
-           <td>
-            <img
-            class="w-9 shadow-2 border-round"
-            [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + customer.file" [alt]="customer.name"
-          />
-           </td>
-            <td>{{ customer.priceStacked }}</td>
-            <td>{{ customer.quantity }}</td>
-            <td >
-              <p-tag
-              [value]="customer.selectedStatus"
-              [severity]="getSeverity(customer.selectedStatus)"
-            ></p-tag>
-            </td>
-            <td>{{ customer.category }}</td>
-            <td>{{ customer.description}}</td>
-            <td>
-              <div class="flex flex-row justify-content-start align-content-center w-21rem">
-                <div>
-                  <span class="button-style">
-                    <button class="button" ><i class="pi pi-pencil" style="color: white"></i> Düzenle</button>
-                  </span>
-                </div>
-                <div>
-                  <span class="button-style" style="margin-left: 5px;">
-                    <button class="button"  ><i class="pi pi-trash" style="color: white"></i> Sil</button>
-                  </span>
-                </div>
-              </div>
-            </td>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="emptymessage">
-            <tr>
-                <td colspan="5">No customers found.</td>
-            </tr>
-        </ng-template>
-    </p-table>
-  </div>
-
-
 </div>
