--- a/src/app/dashboard/components/user-management/user-management.component.scss
+++ b/src/app/dashboard/components/user-management/user-management.component.scss
@@ -1,15 +1,21 @@
-.conatiner {
-  width: 100%;
+.container{
+  padding: 20px;
 }
 
-.card{
-  justify-content: center;
-  width: 90%;
-  float: right;
-  overflow: auto; /* Yatay kaydırmayı etkinleştir */
-  white-space: nowrap;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-color: #000;
-  margin-right: 20px;
-  margin-bottom: 20px;
+
+.product-body{
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+}
+.product-filter{
+  width: 300px;
+  height: 100%;
+  float: left;
+
+}
+.product-list{
+  position: relative;
+  left: 50px;
+  width: 1000px;
 }
