--- a/src/app/pages/components/main/resetpassword/resetpassword.component.html
+++ b/src/app/pages/components/main/resetpassword/resetpassword.component.html
@@ -38,13 +38,14 @@
       }}
     </small>
     <span class="button-style mt-4">
-      <button class="button w-12rem">
+      <button pButton class="button">
         {{ "resetForm.buttonLabelNew" | transloco }}
       </button>
     </span>
     <span class="button-style mt-4">
       <button
-        class="button w-12rem custom-button"
+        pButton
+        class="button custom-button"
         routerLink="/login"
       >
         {{ "resetForm.buttonLabelBack" | transloco }}
