--- a/src/app/pages/components/navbar-list/navbar-list.component.scss
+++ b/src/app/pages/components/navbar-list/navbar-list.component.scss
@@ -3,8 +3,14 @@
   justify-content: space-evenly;
   background-color: transparent;
   cursor: pointer;
+  background-color: transparent; /* Özel renk ekleyebilirsiniz */
+  color: #fff;
   backdrop-filter: blur(15px);
+  margin-top: 0;
+}
 
+.navbar a{
+  color: #fff;
 }
 
 .menu{
@@ -29,6 +35,6 @@
   background: transparent;
 }
 
-.menu-item i{
-  margin-right: 5px;
-}
+  .menu-item i{
+    margin-right: 5px;
+  }
