--- a/src/app/pages/components/orders/content-table/content-table.component.scss
+++ b/src/app/pages/components/orders/content-table/content-table.component.scss
@@ -1,75 +1,26 @@
-.flex {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
+$primary-color: #3498db;
+$secondary-color: #1071b3;
+$danger-color: #e74c3c;
+$dark-text: #34495e;
+$light-text: #ecf0f1;
+$background-color: #ecf0f1;
 
-.w-full {
-  width: 100%;
-}
+:host ::ng-deep{
+  .table{
+    margin-left: 25px;
+    width: 100%;
+    max-height: 100vh;
 
-.container-table {
-  padding: 1rem;
-  justify-content: center;
-  align-items: center;
-  text-align: center
-}
+    th{
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+    }
 
-.table {
-  background-color: #ffffff;
-  border: 1px solid #e0e0e0;
-  border-radius: 0.5rem;
-  overflow: hidden;
-
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th, td {
-  padding: 1rem;
-  text-align: center;
-}
-
-th {
-  background-color: #333;
-  color: #fff;
-}
-
-td {
-  border-bottom: 1px solid #e0e0e0;
-}
-
-.button-style {
-  text-align: center;
-}
-
-.button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  border-radius: 0.25rem;
-}
-
-.container-price {
-  background-color: #ffffff;
-  border: 1px solid #e0e0e0;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  text-align: center;
-  margin-top: 1rem;
-}
-
-h3 {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-hr {
-  border: 0.5px solid #e0e0e0;
-  margin: 1rem 0;
+    td{
+      border: none;
+      border-bottom: 2px solid $primary-color;
+      padding: 5px;
+    }
+  }
 }
