--- a/src/app/dashboard/components/user-management/get-user/get-user.component.html
+++ b/src/app/dashboard/components/user-management/get-user/get-user.component.html
@@ -1,4 +1,4 @@
-<div class="conatiner">
+<div class="conatiner" styleClass="container">
   <div class="card" style="width: 1100px;">
     <p-table
         #dt2
