--- a/src/app/dashboard/components/user-management/user-sidebar/user-sidebar.component.html
+++ b/src/app/dashboard/components/user-management/user-sidebar/user-sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="column flex flex-column align-content-between">
-    <div class="flex my-3" [routerLink]="['/user-management', 'get-user']">get-user</div>
-    <div class="flex my-3" [routerLink]="['/user-management', 'add-user']">add-user</div>
+    <button pButton class="flex my-3" [routerLink]="['/user-management', 'get-user']">get-user</button>
+    <button pButton class="flex my-3" [routerLink]="['/user-management', 'add-user']">add-user</button>
     <!-- <div class="flex my-3" [routerLink]="['/user-management', 'update-user']">update-user</div> -->
     <div></div>
     <div>another</div>
