--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  margin: 0;
+  margin: -16px;
   padding: 0;
 }
 
 .app-content {
   flex: 1; /* İçerik alanını doldurmak için esneklik ekleyin */
-  padding: 75px;
+  padding: 35px;
 
 }
 
